app/styles/_general.scss
/* ... */
// ====



//
// Health Daily
//
.health-daily-avatar {
  float: left;
  width: 100%;
  margin: 0 auto;
  display: inline-block;
  text-align: center;
  margin-top: 15px;

  img {
    max-width: 100%;
    height: auto;
    @include bdr(100%);
  }

  figcaption {
    text-align: center;
    color: $font-primary;
    font-size: ($fs-normal)*2;
    margin-top: 20px;
    font-family: $ff-regular;

    span {
      margin-top: -5px;
      display: block;
      font-family: $ff-light;
      font-size: ($fs-normal)+.8;
    }
  }
}

.total-participants {
  float: left;
  margin: 22px 0 20px 0;

  div {
    float: left;
  }

  .geral {
    float: left;
    clear: left;
    padding: 0;
  
    .status  {
      width: 150px;
      margin: 0 0 0 5px;

      figure {
        img {
          @include bdr(100%);
          @include bsd(0px, 7px, 12px, rgba(0, 0, 0, .3));
        }
      }

      ul {

        li {
          float: left;
          width: 155px;
          cursor: pointer;
        }

        li:nth-child(1) {
          margin: 0 15px 0 0;
        }

        figcaption {
          float: right;
          font-family: $ff-light;
          font-size: ($fs-normal)+.6;
          color: $font-primary;

          span {
            font-family: $ff-bold;
          }

          p {
            font-size: ($fs-normal)+.2;
          }
        }
      }
    }
  }

  h1 {
    font-family: $ff-light;
    font-size: ($fs-medium)+.4;
    color: $font-primary;
    margin: 10px 0 20px 0;

    span {
      font-family: $ff-bold;
    }
  }
}

.frequency {
  position: relative;

  h2, h3 {
    float: left;
  }
  h3 {
    clear: both;
  }
  .sort-by {
    position: absolute;
    top: 15px;
    right: 15px;
    margin: 0;
  }
}

.sort-by {
  float: right;
  margin: 15px 0 0 0;

  button {
    color: $link-primary;
    background-color: $btn-primary;
    border: none;

    &:hover {
      color: $link-primary;
      background-color: $btn-google;
    }
  }

  .dropdown-menu {
    left: initial;
    right: 0;
    min-width: auto;

    li {
      float: none;
      margin: 0;
      padding: 0;
      width: auto;
      text-align: center;
    }
  }
}

// ====



//
// News
//

.wrapper-full-page {
  min-height: 700px;
  background-color: $link-primary;

  .privacy-policy {

    .title-primary {
      color: $btn-primary;
      font-size: ($fs-medium)+1;
      margin: 0px auto 20px auto;
    }
  }
}

.news-card {
  position: relative;
  min-height: 320px;
  margin-bottom: 35px;
  padding: 0 15px;
}

.news-date {
  font-family: $ff-bold;
  color: $font-primary;
  font-size: ($fs-medium)+.4;
  text-align: left;
  margin-bottom: 5px;

  span {
    font-family: $ff-light;
    text-transform: uppercase;
  }
}

.news-link {
  display: block;

  figure {
    position: relative;
    overflow: hidden;

    img {
      width: 100%;
      @include scale3d(1);
      @include transition(transform, .2s, 0s, linear);
    }

    figcaption {
      color: $link-primary;
      font-size: ($fs-normal)+.6;
      padding: 8px;
      text-align: left;
      height: 110px;
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
      @include rgba($blue-light-rgb, .85);
    }
  }

  &:hover {
    text-decoration: none;

    img { @include scale3d(1.2); }
  }
}

.news-footer {
  height: 20px;
  bottom: 0;
  left: 0;
  width: 100%;
  padding: 0 10px;
  font-size: ($fs-normal)-.1;
  color: $link-primary;
  font-family: $ff-light;
  @include rgba($blue-light-rgb, .85);
}

.news-read-more {
  float: right;
  font-family: $ff-bold;
  font-size: ($fs-normal);
}

// ====



//
// Survey
//

.survey-content {
  text-align: center;
  background-image: radial-gradient(50% 162%, #1976D2 56%, #01579B 100%);

  .title-primary {
    color: $link-primary;
    font-size: ($fs-medium)*2;
    margin-bottom: 40px;
  }
}

.survey-avatar {
  width: 130px;
  height: 200px;
  margin: 0 15px 30px 0;
  display: inline-block;

  img {
    max-width: 100%;
    @include bdr(100%);
    @include bsd(0, 4px, 6px, rgba(0, 0, 0, .5));
  }

  figcaption {
    text-align: center;
    color: $link-primary;
    font-size: ($fs-normal)*2;
    margin-top: 20px;
    font-family: $ff-bold;

    span {
      margin-top: -5px;
      display: block;
      font-family: $ff-light;
      font-size: ($fs-normal)+.8;
    }
  }

  a {
    display: block;
    cursor: pointer;

    &:hover { text-decoration: none; }
  }
}

.survey-subtitle {
  font-family: $ff-light;
  font-size: ($fs-normal)*2+.2;
  color: $link-primary;
  margin: 35px auto 25px auto;
}

.btn-hayf {
  @include apr(none);
  @include bdr(100%);
  border: none;
  outline: none;
  width: 210px;
  height: 210px;
  margin: 0 40px 90px 40px;
  background-color: transparent;
  background-size: 100%;
  background-repeat: no-repeat;
  background-position: center center;
  position: relative;
  font-family: $ff-light;

  &::before {
    content: attr(data-label);
    color: $link-primary;
    position: absolute;
    bottom: -55px;
    left: 50%;
    margin-left: -25px;
    font-size: ($fs-medium)+1.5;
  }

  &.good {
    @include path('icon-survey-good.svg');
  }

  &.bad {
    @include path('icon-survey-bad.svg');
  }
}

.survey-footer {
  font-size: ($fs-normal)+.6;
  color: $link-primary;
  text-align: center;
  padding-bottom: 30px;
}

// ====



//
// Login
//

// social login
.login-subtitle {
  font-family: $ff-light;
  color: $link-primary;
  font-size: ($fs-medium);
  text-align: center;
  margin-bottom: 20px;
}
/* ... */

